--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <header class="masthead d-flex align-items-center">
             <div class="container px-4 px-lg-5 text-center">
                 <h1 class="mb-1">Chelsea Patel's E-Portfolio</h1>
+                body{color:white;}
   
                 <h3 class="mb-5"><em>Computer Science w/ conc in Software Engineering from Southern New Hampshire University</em></h3>
                 
