--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mb-4">Code review</h2>
 <!--add a youtube link for code review-->
-                <a class="btn btn-xl btn-dark" href="#!">click me!</a>
+                <a class="btn btn-xl btn-dark" href="https://www.youtube.com/playlist?list=PLbkptZTaV9zo933uNMhVEa29OiNtYDcoc">click me!</a>
             </div>
         </section>
         <!-- Map-->
