--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ I look forward to tasks where I can learn and grow. I am driven to complete work
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">Database</div>
-                                    <p class="mb-0">Enhacned the inventory app. Incorporated a database for accepting products and login/ registeration information.</p>
+                                    <p class="mb-0">Enhacned  to incorporated a database for accepting products and login/ registeration information.</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="..." />
