--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                         </p>
                        
-                        <a class="btn btn-dark btn-xl" href="https://github.com/Chelseapatel2425">Project Completed</a>
+                        <a class="btn btn-dark btn-xl" href="https://github.com/Chelseapatel2425">Completed Projects</a>
                     </div>
                 </div>
             </div>
